--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   wireguard:
     container_name: wireguard
-    image: ghcr.io/linuxserver/wireguard:1.0.20210914
+    image: ghcr.io/linuxserver/wireguard:latest
     cap_add:
       - NET_ADMIN
       - SYS_MODULE
