--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - SERVERPORT=443
       - PEERS=$VPN_PEERS
       - PEERDNS=$PRIVATE_IP #private ip (pihole is dns)
-    # - ALLOWEDIPS=0.0.0.0/0 #optional
+      - ALLOWEDIPS=0.0.0.0/0 #optional
       - PERSISTENTKEEPALIVE_PEERS=$VPN_PEERS
     volumes:
       - ./wireguard/config:/config
